Reviewed exception handling
Changes made do not warrant a new release.

Also resolved editor warnings on modified files.